# ashare-mcp

./: .gitignore  README.md  pyproject.toml
src/ashare_mcp/: checks.py  data_source.py  peer_compare.py  server.py  utils.py
