[project]
name = "ashare-mcp"
version = "0.1.0"
description = "MCP server for Chinese A-share financial statements: pull, cross-check, peer-compare. 把 A 股财报变成 LLM 工具调用。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yli769227-jpg" }]
keywords = ["mcp", "finance", "a-share", "llm", "agent", "财报", "勾稽"]
dependencies = [
    "mcp>=1.27.0",
    "akshare>=1.18.0",
    "pandas>=2.0",
]

[project.scripts]
ashare-mcp = "ashare_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashare_mcp"]
